--- a/dnw-status/packages.config
+++ b/dnw-status/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.3.0" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.33" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="System.Collections" version="4.0.11" targetFramework="net472" />
   <package id="System.Console" version="4.0.0" targetFramework="net472" />
